@@ -116,7 +116,11 @@ public void pack()
 public String toString() {
 	
 	StringBuffer buffer = new StringBuffer();
-	buffer.append(len+" "+neighbors.length);
-	return buffer.toString();
+	buffer.append("len="+len+" maxlen="+neighbors.length+" [");
+	for(int i=0; i<len; ++i)
+	{
+		buffer.append(neighbors[i].getIndex()+" ");
+	}
+	return buffer.append("]").toString();
 }
 }
